2004-07-27  Anders Carlsson  <andersca@gnome.org>

	* demos/gtk-demo/iconview.c: (do_iconview):
	Change selection mode to multiple.
	
	* gdk/gdkdrawable.h:
	* gdk/linux-fb/gdkdrawable-fb2.c:
	(gdk_draw_rectangle_alpha_libgtk_only):
	* gdk/win32/gdkdrawable-win32.c:
	(gdk_draw_rectangle_alpha_libgtk_only):
	* gdk/x11/gdkdrawable-x11.c: (gdk_x11_draw_image),
	(get_impl_drawable), (gdk_x11_draw_pixbuf),
	(gdk_draw_rectangle_alpha_libgtk_only):
	Add gdk_draw_rectangle_alpha_libgtk_only which uses 
	XRenderFillRectangle on X11. It's stubbed out on the 
	Win32 and fb backends.
	
	* gtk/gtkiconview.c: 
	(gtk_icon_view_paint_rubberband):
	Use gdk_draw_rectangle_alpha_libgtk_only here.

2004-07-27  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkaboutdialog.c: (gtk_about_dialog_init),
	(text_view_style_set), (add_credits_page),
	(display_credits_dialog), (display_license_dialog):
	Remove dialog separators, fix text view background setting,
	use Close buttons instead of OK buttons.
	
2004-07-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_ensure_interactive_directory): 
	Add a frame around the C-f popup to stop it from merging visually
	in whatever is underneath.

	* gtk/gtkcombobox.h: 
	* gtk/gtkcombobox.c (gtk_combo_box_get_popup_accessible): New 
	function necessary to make GtkComboBox accessible.  (#132847, 
	Padraig O'Briain)

Tue Jul 27 02:34:06 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwidget.c (gtk_widget_dispose): Hide parentless
	windows when disposing them.  (#133231, Michael Natterer)

2004-07-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_class_init): Expand the documentation
	for GtkLabel::ellipsize.

Mon Jul 26 00:38:27 2004  Matthias Clasen  <maclas@gmx.de>

	Make the GtkComboBox in list mode scroll if the list is too
	large to fit in the popup.  (#135543)

	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget): Add a 
	scrolled window to the popup in list mode.